analysis of activity - done